--- a/personal-website-v2/public/index.html
+++ b/personal-website-v2/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
-    <title>React App</title>
+    <title>Stewart McFarlane</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
